# POC_Crosser_Observability_Client

./: .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  Todo.txt  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: api.py  config.py  db.py  main.py  models.py  schemas.py  services.py  telemetry.py
certs/dev/: README.md
certs/prod/: README.md
hivemq/conf/: config.xml
scripts/: gen_dev_certs.sh  record_test_mosquitto.ps1  record_test_mosquitto_with_publish.ps1
