[project]
name = "mqtt-recorder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "asyncio-mqtt>=0.16",
  "paho-mqtt<2",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
]

